--- a/hw-w02d02-html-css/starter_code/css/style.css
+++ b/hw-w02d02-html-css/starter_code/css/style.css
@@ -94,7 +94,7 @@ footer {
     margin: 10px;
 }
 
-.list {
+#list {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
