--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -70,7 +70,7 @@ body {
 }
 #now{
     font-weight: 800;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 5px;
     background-color: #f9e42e;
     width: 200px;
@@ -82,11 +82,12 @@ body {
     
 }
 #piece{
-    font-display: 24px;
+    font-size: 24px;
     font-weight: 600;
     text-align: center;
     color: #ffffff;
     padding-top: 5%;
+    padding-bottom: 20px;
 
     
 }
